# some_projects

Auto/: Auto.hs  README.md  RunAuto.hs
Grammars/: build.xml
Interpreter/: AbsGrammar.hs  DocGrammar.txt  Interpreter.hs  LexGrammar.hs  Main.hs  Makefile  ParGrammar.hs  PrintGrammar.hs  README.md  SkelGrammar.hs  TypeChecker.hs  run_tests.sh
Introductory-Programming-imperative-approach/: README.md  SetGame.pas  sameGame.pas  zad3.pas
KMeans_MPI/: Makefile  README.md  main.c  metrics.c  metrics.h  run.sh  utils.c  utils.h
Multichat/: Makefile  README  client.c  err.c  server.c
ONP/: Makefile  README.md  ToONP.c  W.c  err.c
Pikachu/: README.md  pikachu.sh  pikachu_executor.sh
RadioPlayer/: Makefile  README.md  client_udp.c  header.c  header.h  player.c  types.h
ResourcesThreads/: README.md  client  client.c  err.h  makefile  mesg.h  server  server.c
SpellChecker/: README.md
SpellChecker/src/dictionary/: CMakeLists.txt  dictionary.c  dictionary.h  dictionary_test.c  trie.c  trie.h  trie_test.c  vector.c  vector.h  vector_test.c  word_list.c  word_list.h  word_list_test.c
TheVoice/: AZLyricsSongsParser.java  Artist.java  FileSongsParser.java  Pair.java  Processor.java  ProcessorCount.java  ProcessorTop5.java  README.md  Song.java  SongsParser.java
algorithms_and_data_structures_class/: README.md
log_analysis_database/: README.md  db_log.sql  load_logs.css  load_logs.js  load_logs.php  logs.css  logs.php  stats.css  stats.php  uploads_history.css  uploads_history.js  uploads_history.php  users_list.css  users_list.js  users_list.php
(+101 files in other folders)
